website/versioned_docs/version-0.7.0/cli-reference/gitops_delete_cluster.md
## gitops delete cluster

Delete a cluster given its name

```
gitops delete cluster [flags]
```

### Examples

```

# Delete a CAPI cluster by its name
gitops delete cluster <cluster-name>
		
```

### Options

```
      --base string             The base branch to open the pull request against
      --branch string           The branch to create the pull request from
      --commit-message string   The commit message to use when deleting the clusters
      --description string      The description of the pull request
  -h, --help                    help for cluster
      --title string            The title of the pull request
      --url string              The repository to open a pull request against
```

### Options inherited from parent commands

```
  -e, --endpoint string            The Weave GitOps Enterprise HTTP API endpoint
      --insecure-skip-tls-verify   If true, the server's certificate will not be checked for validity. This will make your HTTPS connections insecure
      --namespace string           The namespace scope for this operation (default "flux-system")
  -v, --verbose                    Enable verbose output
```

### SEE ALSO

* [gitops delete](gitops_delete.md)	 - Delete one or many Weave GitOps resources

###### Auto generated by spf13/cobra on 12-Apr-2022
